@@ -1,6 +1,6 @@
 /* Demangler for GNU C++
    Copyright 1989, 1991, 1994, 1995, 1996, 1997, 1998, 1999,
-   2000, 2001, 2002, 2003, 2004, 2010 Free Software Foundation, Inc.
+   2000, 2001, 2002, 2003, 2004 Free Software Foundation, Inc.
    Written by James Clark (jjc@jclark.uucp)
    Rewritten by Fred Fish (fnf@cygnus.com) for ARM and Lucid demangling
    Modified by Satish Pai (pai@apollo.hp.com) for HP demangling
@@ -61,6 +61,8 @@ void * realloc ();
 #define CURRENT_DEMANGLING_STYLE work->options
 
 #include "libiberty.h"
+
+static char *ada_demangle (const char *, int);
 
 #define min(X,Y) (((X) < (Y)) ? (X) : (Y))
 
@@ -476,6 +478,8 @@ demangle_arm_hp_template (struct work_stuff *, const char **, int, string *);
 static void
 recursively_demangle (struct work_stuff *, const char **, string *, int);
 
+static void grow_vect (char **, size_t *, size_t, int);
+
 /* Translate count to integer, consuming tokens in the process.
    Conversion terminates on the first non-digit character.
 
@@ -868,268 +872,129 @@ cplus_demangle (const char *mangled, int options)
     }
 
   if (GNAT_DEMANGLING)
-    return ada_demangle (mangled, options);
+    return ada_demangle(mangled,options);
 
   ret = internal_cplus_demangle (work, mangled);
   squangle_mop_up (work);
   return (ret);
 }
 
-/* Demangle ada names.  The encoding is documented in gcc/ada/exp_dbug.ads.  */
 
-char *
+/* Assuming *OLD_VECT points to an array of *SIZE objects of size
+   ELEMENT_SIZE, grow it to contain at least MIN_SIZE objects,
+   updating *OLD_VECT and *SIZE as necessary.  */
+
+static void
+grow_vect (char **old_vect, size_t *size, size_t min_size, int element_size)
+{
+  if (*size < min_size)
+    {
+      *size *= 2;
+      if (*size < min_size)
+	*size = min_size;
+      *old_vect = XRESIZEVAR (char, *old_vect, *size * element_size);
+    }
+}
+
+/* Demangle ada names:
+   1. Discard final __{DIGIT}+ or ${DIGIT}+
+   2. Convert other instances of embedded "__" to `.'.
+   3. Discard leading _ada_.
+   4. Remove everything after first ___ if it is followed by 'X'.
+   5. Put symbols that should be suppressed in <...> brackets.
+   The resulting string is valid until the next call of ada_demangle.  */
+
+static char *
 ada_demangle (const char *mangled, int option ATTRIBUTE_UNUSED)
 {
+  int i, j;
   int len0;
   const char* p;
-  char *d;
-  char *demangled;
+  char *demangled = NULL;
+  int changed;
+  size_t demangled_size = 0;
   
-  /* Discard leading _ada_, which is used for library level subprograms.  */
+  changed = 0;
+
   if (strncmp (mangled, "_ada_", 5) == 0)
-    mangled += 5;
-
-  /* All ada unit names are lower-case.  */
-  if (!ISLOWER (mangled[0]))
-    goto unknown;
-
-  /* Most of the demangling will trivially remove chars.  Operator names
-     may add one char but because they are always preceeded by '__' which is
-     replaced by '.', they eventually never expand the size.
-     A few special names such as '___elabs' add a few chars (at most 7), but
-     they occur only once.  */
-  len0 = strlen (mangled) + 7 + 1;
-  demangled = XNEWVEC (char, len0);
-  
-  d = demangled;
-  p = mangled;
-  while (1)
     {
-      /* An entity names is expected.  */
-      if (ISLOWER (*p))
-        {
-          /* An identifier, which is always lower case.  */
-          do
-            *d++ = *p++;
-          while (ISLOWER(*p) || ISDIGIT (*p)
-                 || (p[0] == '_' && (ISLOWER (p[1]) || ISDIGIT (p[1]))));
-        }
-      else if (p[0] == 'O')
-        {
-          /* An operator name.  */
-          static const char * const operators[][2] =
-            {{"Oabs", "abs"},  {"Oand", "and"},    {"Omod", "mod"},
-             {"Onot", "not"},  {"Oor", "or"},      {"Orem", "rem"},
-             {"Oxor", "xor"},  {"Oeq", "="},       {"One", "/="},
-             {"Olt", "<"},     {"Ole", "<="},      {"Ogt", ">"},
-             {"Oge", ">="},    {"Oadd", "+"},      {"Osubtract", "-"},
-             {"Oconcat", "&"}, {"Omultiply", "*"}, {"Odivide", "/"},
-             {"Oexpon", "**"}, {NULL, NULL}};
-          int k;
-
-          for (k = 0; operators[k][0] != NULL; k++)
-            {
-              size_t slen = strlen (operators[k][0]);
-              if (strncmp (p, operators[k][0], slen) == 0)
-                {
-                  p += slen;
-                  slen = strlen (operators[k][1]);
-                  *d++ = '"';
-                  memcpy (d, operators[k][1], slen);
-                  d += slen;
-                  *d++ = '"';
-                  break;
-                }
-            }
-          /* Operator not found.  */
-          if (operators[k][0] == NULL)
-            goto unknown;
-        }
-      else
-        {
-          /* Not a GNAT encoding.  */
-          goto unknown;
-        }
-
-      /* The name can be directly followed by some uppercase letters.  */
-      if (p[0] == 'T' && p[1] == 'K')
-        {
-          /* Task stuff.  */
-          if (p[2] == 'B' && p[3] == 0)
-            {
-              /* Subprogram for task body.  */
-              break;
-            }
-          else if (p[2] == '_' && p[3] == '_')
-            {
-              /* Inner declarations in a task.  */
-              p += 4;
-              *d++ = '.';
-              continue;
-            }
-          else
-            goto unknown;
-        }
-      if (p[0] == 'E' && p[1] == 0)
-        {
-          /* Exception name.  */
-          goto unknown;
-        }
-      if ((p[0] == 'P' || p[0] == 'N') && p[1] == 0)
-        {
-          /* Protected type subprogram.  */
-          break;
-        }
-      if ((*p == 'N' || *p == 'S') && p[1] == 0)
-        {
-          /* Enumerated type name table.  */
-          goto unknown;
-        }
-      if (p[0] == 'X')
-        {
-          /* Body nested.  */
-          p++;
-          while (p[0] == 'n' || p[0] == 'b')
-            p++;
-        }
-      if (p[0] == 'S' && p[1] != 0 && (p[2] == '_' || p[2] == 0))
-        {
-          /* Stream operations.  */
-          const char *name;
-          switch (p[1])
-            {
-            case 'R':
-              name = "'Read";
-              break;
-            case 'W':
-              name = "'Write";
-              break;
-            case 'I':
-              name = "'Input";
-              break;
-            case 'O':
-              name = "'Output";
-              break;
-            default:
-              goto unknown;
-            }
-          p += 2;
-          strcpy (d, name);
-          d += strlen (name);
-        }
-      else if (p[0] == 'D')
-        {
-          /* Controlled type operation.  */
-          const char *name;
-          switch (p[1])
-            {
-            case 'F':
-              name = ".Finalize";
-              break;
-            case 'A':
-              name = ".Adjust";
-              break;
-            default:
-              goto unknown;
-            }
-          strcpy (d, name);
-          d += strlen (name);
-          break;
-        }
-
-      if (p[0] == '_')
-        {
-          /* Separator.  */
-          if (p[1] == '_')
-            {
-              /* Standard separator.  Handled first.  */
-              p += 2;
-
-              if (ISDIGIT (*p))
-                {
-                  /* Overloading number.  */
-                  do
-                    p++;
-                  while (ISDIGIT (*p) || (p[0] == '_' && ISDIGIT (p[1])));
-                  if (*p == 'X')
-                    {
-                      p++;
-                      while (p[0] == 'n' || p[0] == 'b')
-                        p++;
-                    }
-                }
-              else if (p[0] == '_' && p[1] != '_')
-                {
-                  /* Special names.  */
-                  static const char * const special[][2] = {
-                    { "_elabb", "'Elab_Body" },
-                    { "_elabs", "'Elab_Spec" },
-                    { "_size", "'Size" },
-                    { "_alignment", "'Alignment" },
-                    { "_assign", ".\":=\"" },
-                    { NULL, NULL }
-                  };
-                  int k;
-
-                  for (k = 0; special[k][0] != NULL; k++)
-                    {
-                      size_t slen = strlen (special[k][0]);
-                      if (strncmp (p, special[k][0], slen) == 0)
-                        {
-                          p += slen;
-                          slen = strlen (special[k][1]);
-                          memcpy (d, special[k][1], slen);
-                          d += slen;
-                          break;
-                        }
-                    }
-                  if (special[k][0] != NULL)
-                    break;
-                  else
-                    goto unknown;
-                }
-              else
-                {
-                  *d++ = '.';
-                  continue;
-                }
-            }
-          else if (p[1] == 'B' || p[1] == 'E')
-            {
-              /* Entry Body or barrier Evaluation.  */
-              p += 2;
-              while (ISDIGIT (*p))
-                p++;
-              if (p[0] == 's' && p[1] == 0)
-                break;
-              else
-                goto unknown;
-            }
-          else
-            goto unknown;
-        }
-
-      if (p[0] == '.' && ISDIGIT (p[1]))
-        {
-          /* Nested subprogram.  */
-          p += 2;
-          while (ISDIGIT (*p))
-            p++;
-        }
-      if (*p == 0)
-        {
-          /* End of mangled name.  */
-          break;
-        }
-      else
-        goto unknown;
+      mangled += 5;
+      changed = 1;
     }
-  *d = 0;
-  return demangled;
+  
+  if (mangled[0] == '_' || mangled[0] == '<')
+    goto Suppress;
+  
+  p = strstr (mangled, "___");
+  if (p == NULL)
+    len0 = strlen (mangled);
+  else
+    {
+      if (p[3] == 'X')
+	{
+	  len0 = p - mangled;
+	  changed = 1;
+	}
+      else
+	goto Suppress;
+    }
+  
+  /* Make demangled big enough for possible expansion by operator name.  */
+  grow_vect (&demangled,
+	     &demangled_size,  2 * len0 + 1,
+	     sizeof (char));
+  
+  if (ISDIGIT ((unsigned char) mangled[len0 - 1])) {
+    for (i = len0 - 2; i >= 0 && ISDIGIT ((unsigned char) mangled[i]); i -= 1)
+      ;
+    if (i > 1 && mangled[i] == '_' && mangled[i - 1] == '_')
+      {
+	len0 = i - 1;
+	changed = 1;
+      }
+    else if (mangled[i] == '$')
+      {
+	len0 = i;
+	changed = 1;
+      }
+  }
+  
+  for (i = 0, j = 0; i < len0 && ! ISALPHA ((unsigned char)mangled[i]);
+       i += 1, j += 1)
+    demangled[j] = mangled[i];
+  
+  while (i < len0)
+    {
+      if (i < len0 - 2 && mangled[i] == '_' && mangled[i + 1] == '_')
+	{
+	  demangled[j] = '.';
+	  changed = 1;
+	  i += 2; j += 1;
+	}
+      else
+	{
+	  demangled[j] = mangled[i];
+	  i += 1;  j += 1;
+	}
+    }
+  demangled[j] = '\000';
+  
+  for (i = 0; demangled[i] != '\0'; i += 1)
+    if (ISUPPER ((unsigned char)demangled[i]) || demangled[i] == ' ')
+      goto Suppress;
 
- unknown:
-  len0 = strlen (mangled);
-  demangled = XNEWVEC (char, len0 + 3);
+  if (! changed)
+    {
+      free (demangled);
+      return NULL;
+    }
+  else
+    return demangled;
+  
+ Suppress:
+  grow_vect (&demangled,
+	     &demangled_size,  strlen (mangled) + 3,
+	     sizeof (char));
 
   if (mangled[0] == '<')
      strcpy (demangled, mangled);
@@ -1311,7 +1176,8 @@ delete_non_B_K_work_stuff (struct work_stuff *work)
       int i;
 
       for (i = 0; i < work->ntmpl_args; i++)
-	free ((char*) work->tmpl_argvec[i]);
+	if (work->tmpl_argvec[i])
+	  free ((char*) work->tmpl_argvec[i]);
 
       free ((char*) work->tmpl_argvec);
       work->tmpl_argvec = NULL;
